src/objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>CC_Account_ID__c</fullName>
        <label>CC Account ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Contact_ID__c</fullName>
        <label>CC Contact ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID for Upsert - Account-Contact-Role/Type</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID for Upsert - Account-Contact-Role/Type</inlineHelpText>
        <label>External_ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Since_Last_Update__c</fullName>
        <description>Time in minutes since the record was last changed.</description>
        <formula>(NOW() - LastModifiedDate) * 24 * 60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Since Last Update</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>